--- a/deploy_llama3_unsloth.ipynb
+++ b/deploy_llama3_unsloth.ipynb
@@ -619,7 +619,7 @@
     "# # Config\n",
     "# repo_id = \"zeerakwyne/test2_doc-splitter-llama-3-2-3B-20-epoch_merged\"  \n",
     "# local_dir = \"hf_tmp_model\" \n",
-    "# hf_token = \"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\"\n",
+    "# hf_token = \"\"\n",
     "\n",
     "# # Clean existing model directory if exists\n",
     "# if os.path.exists(local_dir):\n",
